--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MinorApp</string>
+    <string name="logo_name">Minor</string>
+    <string name="authorization_name">Авторизация</string>
+    <string name="btnEnter_name">Войти</string>
+
+    <string name="login_form_username">Логин</string>
+    <string name="login_form_password">Пароль</string>
 </resources>
